@@ -86,7 +86,6 @@ import java.util.stream.Collectors;
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
 
-import static org.eclipse.jetty.http.HttpCookie.SAME_SITE_STRICT_COMMENT;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.*;
 
 /**
@@ -96,6 +95,8 @@ import static uk.ac.cam.cl.dtg.segue.api.Constants.*;
 public class UserAuthenticationManager {
     private static final Logger log = LoggerFactory.getLogger(UserAuthenticationManager.class);
     private static final String HMAC_SHA_ALGORITHM = "HmacSHA256";
+
+    private static final String DUPLICATE_COOKIES = "Duplicate auth cookies found in request from ({}). Ignoring old cookie!";
 
     private final AbstractConfigLoader properties;
     private final IUserDataManager database;
@@ -187,8 +188,7 @@ public class UserAuthenticationManager {
         // if we are an OAuthProvider redirect to the provider
         // authorisation URL.
         URI redirectLink;
-        if (federatedAuthenticator instanceof IOAuth2Authenticator) {
-            IOAuth2Authenticator oauth2Provider = (IOAuth2Authenticator) federatedAuthenticator;
+        if (federatedAuthenticator instanceof IOAuth2Authenticator oauth2Provider) {
             String antiForgeryTokenFromProvider = oauth2Provider.getAntiForgeryStateToken();
 
             // Store antiForgeryToken in the users session.
@@ -200,8 +200,7 @@ public class UserAuthenticationManager {
             } else {
                 redirectLink = URI.create(oauth2Provider.getAuthorizationUrl(antiForgeryTokenFromProvider));
             }
-        } else if (federatedAuthenticator instanceof IOAuth1Authenticator) {
-            IOAuth1Authenticator oauth1Provider = (IOAuth1Authenticator) federatedAuthenticator;
+        } else if (federatedAuthenticator instanceof IOAuth1Authenticator oauth1Provider) {
             OAuth1Token token = oauth1Provider.getRequestToken();
 
             // Store token and secret in the users session.
@@ -284,7 +283,7 @@ public class UserAuthenticationManager {
 
         RegisteredUser user = database.getByLinkedAccount(provider, providerId);
         if (null == user) {
-            log.debug("Unable to locate user based on provider " + "information provided.");
+            log.debug("Unable to locate user based on provider information provided.");
         }
         return user;
     }
@@ -317,9 +316,8 @@ public class UserAuthenticationManager {
         Objects.requireNonNull(plainTextPassword);
         IAuthenticator authenticator = mapToProvider(provider);
         
-        if (authenticator instanceof IPasswordAuthenticator) {
-            IPasswordAuthenticator passwordAuthenticator = (IPasswordAuthenticator) authenticator;
-            
+        if (authenticator instanceof IPasswordAuthenticator passwordAuthenticator) {
+
             return passwordAuthenticator.authenticate(email, plainTextPassword);
         } else {
             throw new AuthenticationProviderMappingException("Unable to map to a known authenticator that accepts "
@@ -366,18 +364,15 @@ public class UserAuthenticationManager {
             // correct CORS headers. This code will merely print warnings if something doesn't look right:
             String referrer = request.getHeader("Referer");  // Note HTTP Header misspelling!
             if (null == referrer) {
-                log.warn("Authenticated request has no 'Referer' information set! Accessing: "
-                        + request.getPathInfo());
+                log.warn("Authenticated request has no 'Referer' information set! Accessing: {}", request.getPathInfo());
             } else if (!referrer.startsWith("https://" + properties.getProperty(HOST_NAME) + "/")) {
-                log.warn("Authenticated request has unexpected Referer: '" + referrer + "'. Accessing: "
-                        + request.getPathInfo());
+                log.warn("Authenticated request has unexpected Referer: '{}'. Accessing: {}", referrer, request.getPathInfo());
             }
             // If the client sends an Origin header, we can check its value. If they do not send the header,
             // we can draw no conclusions.
             String origin = request.getHeader("Origin");
             if (null != origin && !origin.equals("https://" + properties.getProperty(HOST_NAME))) {
-                log.warn("Authenticated request has unexpected Origin: '" + origin + "'. Accessing: "
-                        + request.getMethod() + " " + request.getPathInfo());
+                log.warn("Authenticated request has unexpected Origin: '{}'. Accessing: {} {}", origin, request.getMethod(), request.getPathInfo());
             }
         }
 
@@ -472,7 +467,7 @@ public class UserAuthenticationManager {
 
             // Check that the user's session is indeed valid:
             if (null == userToReturn || !this.isValidUsersSession(currentSessionInformation, userToReturn)) {
-                log.debug("User session has failed validation. Treating as logged out. Session: " + currentSessionInformation);
+                log.debug("User session has failed validation. Treating as logged out. Session: {}", currentSessionInformation);
                 return null;
             }
 
@@ -481,7 +476,7 @@ public class UserAuthenticationManager {
             log.error("Internal Database error. Failed to resolve current user.", e);
             return null;
         } catch (NumberFormatException e) {
-            log.info("Invalid user id detected in session. " + currentSessionInformation.get(SESSION_USER_ID));
+            log.info("Invalid user id detected in session. {}", currentSessionInformation.get(SESSION_USER_ID));
             return null;
         }
     }
@@ -540,8 +535,7 @@ public class UserAuthenticationManager {
 
         ArrayList<String> caveatFlags = serializationMapper.readValue(caveats, new TypeReference<>() {});
         if (!caveatFlags.remove(caveatToRemove.toString())) {
-            log.warn(String.format("Attempted to remove caveat '%s' from user (%s) session, but no such caveat was present!",
-                    caveatToRemove, user.getId()));
+            log.warn("Attempted to remove caveat '{}' from user ({}) session, but no such caveat was present!", caveatToRemove, user.getId());
         }
         Set<AuthenticationCaveat> remainingCaveats = caveatFlags.stream().map(AuthenticationCaveat::valueOf).collect(Collectors.toSet());
 
@@ -560,17 +554,15 @@ public class UserAuthenticationManager {
         Objects.requireNonNull(request);
         try {
             request.getSession().invalidate();
-            Cookie logoutCookie = new Cookie(SEGUE_AUTH_COOKIE, "");
-            logoutCookie.setPath("/");
-            logoutCookie.setMaxAge(0);  // This will lead to it being removed by the browser immediately.
-            logoutCookie.setHttpOnly(true);
-            logoutCookie.setSecure(true);
-            // TODO - set sameSite without the setComment hack when setAttribute is available.
-            logoutCookie.setComment(SAME_SITE_STRICT_COMMENT);
-
+            Cookie logoutCookie = generateSegueAuthCookie("", 0);
             response.addCookie(logoutCookie);
-        } catch (IllegalStateException e) {
-            log.info("The session has already been invalidated. " + "Unable to logout again...", e);
+            // FIXME old-cookies: remove once old cookies deprecated:
+            Cookie oldLogoutCookie = new Cookie(SEGUE_AUTH_COOKIE, "");
+            oldLogoutCookie.setMaxAge(0);
+            oldLogoutCookie.setPath("/");
+            response.addCookie(oldLogoutCookie);
+        } catch (final IllegalStateException e) {
+            log.info("The session has already been invalidated. Unable to logout again...", e);
         }
     }
     
@@ -600,7 +592,7 @@ public class UserAuthenticationManager {
                     + " has not been registered / implemented yet: " + provider);
         }
 
-        log.debug("Mapping provider: " + provider + " to " + enumProvider);
+        log.debug("Mapping provider: {} to {}", provider, enumProvider);
 
         return this.registeredAuthProviders.get(enumProvider);
     }
@@ -695,7 +687,7 @@ public class UserAuthenticationManager {
 
             // Generate reset token, whether or not they have a local password set up:
             String token = authenticator.createPasswordResetTokenForUser(userDO);
-            log.info(String.format("Sending password reset message to %s", userDO.getEmail()));
+            log.info("Sending password reset message to '{}'.", userDO.getEmail());
 
             Map<String, Object> emailValues = ImmutableMap.of("resetURL",
                     String.format("https://%s/resetpassword?token=%s",
@@ -712,7 +704,7 @@ public class UserAuthenticationManager {
             }
 
         } catch (ContentManagerException e) {
-            log.error("ContentManagerException " + e.getMessage());
+            log.error("ContentManagerException", e);
         }
     }
     
@@ -840,7 +832,7 @@ public class UserAuthenticationManager {
 
         String providersString;
         if (providerNames.size() == 1) {
-            providersString = providerNames.get(0);
+            providersString = providerNames.getFirst();
         } else {
             StringBuilder providersBuilder = new StringBuilder();
             for (int i = 0; i < providerNames.size(); i++) {
@@ -870,8 +862,7 @@ public class UserAuthenticationManager {
                     emailTokens, EmailType.SYSTEM);
 
         } catch (ContentManagerException contentException) {
-            log.error(String.format("Error sending federated email verification message - %s", 
-                            contentException.getMessage()));
+            log.error("Error sending federated email verification message!", contentException);
         }
     }
     
@@ -944,12 +935,12 @@ public class UserAuthenticationManager {
         String csrfTokenFromProvider = request.getParameter(key);
 
         if (null == csrfTokenFromUser || !csrfTokenFromUser.equals(csrfTokenFromProvider)) {
-            log.error("Invalid state parameter - Provider said: " + request.getParameter(STATE_PARAM_NAME)
-                    + " Session said: " + request.getSession().getAttribute(STATE_PARAM_NAME));
+            log.error("Invalid state parameter - Provider said: '{}' Session said: '{}'.",
+                    request.getParameter(STATE_PARAM_NAME), request.getSession().getAttribute(STATE_PARAM_NAME));
             return false;
         } else {
-            log.debug("State parameter matches - Provider said: " + request.getParameter(STATE_PARAM_NAME)
-                    + " Session said: " + request.getSession().getAttribute(STATE_PARAM_NAME));
+            log.debug("State parameter matches - Provider said: '{}' Session said: '{}'.",
+                    request.getParameter(STATE_PARAM_NAME), request.getSession().getAttribute(STATE_PARAM_NAME));
             return true;
         }
     }
@@ -1027,21 +1018,14 @@ public class UserAuthenticationManager {
             sessionInformationBuilder.put(HMAC, sessionHMAC);
 
             Map<String, String> sessionInformation = sessionInformationBuilder.build();
+            String cookieValue = Base64.encodeBase64String(serializationMapper.writeValueAsString(sessionInformation).getBytes());
 
-            Cookie authCookie = new Cookie(SEGUE_AUTH_COOKIE,
-                    Base64.encodeBase64String(serializationMapper.writeValueAsString(sessionInformation).getBytes()));
-            authCookie.setMaxAge(sessionExpiryTimeInSeconds);
-            authCookie.setPath("/");
-            authCookie.setHttpOnly(true);
-            authCookie.setSecure(true);
-            // TODO - set sameSite without the setComment hack when setAttribute is available.
-            authCookie.setComment(SAME_SITE_STRICT_COMMENT);
-
-            log.debug(String.format("Creating AuthCookie for user (%s) with value %s", userId, authCookie.getValue()));
-
+            Cookie authCookie = generateSegueAuthCookie(cookieValue, sessionExpiryTimeInSeconds);
             response.addCookie(authCookie);
-            
-        } catch (JsonProcessingException e1) {
+
+            log.debug("Creating SEGUE_AUTH_COOKIE for user ({}) with value ({})", userId, authCookie.getValue());
+
+        } catch (final JsonProcessingException e1) {
             log.error("Unable to save cookie.", e1);
         }
     }
@@ -1092,13 +1076,13 @@ public class UserAuthenticationManager {
 
         // Check no one has tampered with the cookie:
         if (!hasValidHmac(sessionInformation)) {
-            log.warn(String.format("Invalid Cookie HMAC detected for user id (%s)!", userId));
+            log.warn("Invalid Cookie HMAC detected for user id ({})!", userId);
             return false;
         }
 
         // Check that the session token is still valid:
         if (!userFromDatabase.getSessionToken().toString().equals(userSessionToken)) {
-            log.debug("Invalid session token detected for user id " + userId);
+            log.debug("Invalid session token detected for user id {}", userId);
             return false;
         }
 
@@ -1128,13 +1112,31 @@ public class UserAuthenticationManager {
         sb.append("|").append(sessionToken);
 
         if (null != caveatFlags) {
-            List<String> sortedCaveatFlags = caveatFlags.stream().sorted().collect(Collectors.toList());
+            List<String> sortedCaveatFlags = caveatFlags.stream().sorted().toList();
             for (String c : sortedCaveatFlags) {
                 sb.append("|").append(c);
             }
         }
 
         return UserAuthenticationManager.calculateHMAC(key, sb.toString());
+    }
+
+    /**
+     * Create a new SEGUE_AUTH_COOKIE with standard security settings.
+     *
+     * @param cookieValue - string content of the cookie.
+     * @param maxAge - cookie lifetime.
+     * @return the new Cookie object.
+     */
+    private Cookie generateSegueAuthCookie(final String cookieValue, final int maxAge) {
+        Cookie authCookie = new Cookie(SECURE_SEGUE_AUTH_COOKIE, cookieValue);
+        authCookie.setMaxAge(maxAge);
+        authCookie.setPath("/");
+        authCookie.setHttpOnly(true);
+        authCookie.setSecure(true);
+        authCookie.setAttribute("SameSite", "Strict");
+
+        return authCookie;
     }
 
     /**
@@ -1210,13 +1212,23 @@ public class UserAuthenticationManager {
         }
 
         for (Cookie c : request.getCookies()) {
+            // FIXME old-cookies: remove support for SEGUE_AUTH_COOKIE after old cookies expired.
             if (c.getName().equals(SEGUE_AUTH_COOKIE)) {
+                if (null != segueAuthCookie) {
+                    log.warn(DUPLICATE_COOKIES, RequestIPExtractor.getClientIpAddr(request));
+                } else {
+                    segueAuthCookie = c;
+                }
+            } else if (c.getName().equals(SECURE_SEGUE_AUTH_COOKIE)) {
+                if (null != segueAuthCookie) {
+                    log.warn(DUPLICATE_COOKIES, RequestIPExtractor.getClientIpAddr(request));
+                }
                 segueAuthCookie = c;
             }
         }
 
         if (null == segueAuthCookie) {
-            throw new InvalidSessionException("There are no cookies set.");
+            throw new InvalidSessionException("There are no session cookies set.");
         }
 
         @SuppressWarnings("unchecked")
@@ -1240,13 +1252,23 @@ public class UserAuthenticationManager {
         }
 
         for (HttpCookie c : request.getCookies()) {
+            // FIXME old-cookies: remove support for SEGUE_AUTH_COOKIE after old cookies expired.
             if (c.getName().equals(SEGUE_AUTH_COOKIE)) {
+                if (null != segueAuthCookie) {
+                    log.warn(DUPLICATE_COOKIES, "websocket");
+                } else {
+                    segueAuthCookie = c;
+                }
+            } else if (c.getName().equals(SECURE_SEGUE_AUTH_COOKIE)) {
+                if (null != segueAuthCookie) {
+                    log.warn(DUPLICATE_COOKIES, "websocket");
+                }
                 segueAuthCookie = c;
             }
         }
 
         if (null == segueAuthCookie) {
-            throw new InvalidSessionException("There are no cookies set.");
+            throw new InvalidSessionException("There are no session cookies set.");
         }
 
         @SuppressWarnings("unchecked")
@@ -1279,7 +1301,7 @@ public class UserAuthenticationManager {
             String result = new String(Base64.encodeBase64(rawHmac));
             return result;
         } catch (GeneralSecurityException e) {
-            log.warn("Unexpected error while creating hash: " + e.getMessage(), e);
+            log.warn("Unexpected error while creating HMAC! ", e);
             throw new IllegalArgumentException();
         }
     }
